@@ -4,6 +4,7 @@ Priority: extra
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Christian Perrier <bubulle@debian.org>
 Build-Depends: debhelper (>= 4.2), dpkg-dev (>= 1.7.0), po-debconf (>= 0.5.0)
+Standards-Version: 3.6.2
 
 Package: user-setup-udeb
 XC-Package-Type: udeb
@@ -12,3 +13,11 @@ Priority: standard
 XB-Installer-Menu-Item: 63
 Description: Set up users and passwords
 
+Package: user-setup
+Architecture: all
+Section: admin
+Priority: extra
+Description: Set up initial user and password
+ This package creates an initial user, using the same code as is
+ responsible for creating the initial user in the installer. It is only
+ likely to be of any use if your system has no non-system users at all.
