@@ -1,22 +1,28 @@
 #!/usr/bin/make -f
 
+export DH_OPTIONS
+
 build:
 	dh_testdir
 
 clean:
 	dh_testdir
 	dh_testroot
-	dh_clean
+	dh_clean debian/user-setup.templates
 
 install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_install
+	dh_install -i
 
+binary-indep: DH_OPTIONS=-i
 binary-indep: build install
 	dh_testdir
 	dh_testroot
+	dh_installdocs
+	dh_installchangelogs
+	cp -a debian/user-setup-udeb.templates debian/user-setup.templates
 	dh_installdebconf
 	dh_strip
 	dh_compress
