@@ -1,4 +1,4 @@
-user-setup usr/bin
+user-setup-ask usr/bin
 user-setup-apply usr/bin
 functions.sh usr/lib/user-setup
 prebaseconfig.d usr/lib
