@@ -1,7 +1,7 @@
 #!/bin/sh
 set -e
 CODE=0
-user-setup /target || CODE="$?"
+user-setup-ask /target || CODE="$?"
 if [ "$CODE" = 30 ]; then
 	exit 10
 else
