@@ -1,0 +1,4 @@
+user-setup usr/bin
+user-setup-ask usr/lib/user-setup
+user-setup-apply usr/lib/user-setup
+functions.sh usr/lib/user-setup
