@@ -1,0 +1,8 @@
+#! /bin/sh
+set -e
+
+. /usr/share/debconf/confmodule
+
+#DEBHELPER#
+
+exit 0
