@@ -2,6 +2,10 @@ user-setup (0.04) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Add /usr/share/common-licenses/GPL reference to debian/copyright.
+  * Add a primitive user-setup.deb, to replace the old 'dpkg-reconfigure
+    passwd.config'; may be of some use in live CD-style environments.
+  * Rename user-setup to user-setup-ask to make room for a user-setup
+    wrapper script in the .deb.
 
   [ Christian Perrier ]
   * Call commands using [a-z] intervals under a C locale
